--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=motorbikestore.db"
+    "DefaultConnection": "Data source=motorbikestore.db",
+    "Redis": "localhost"
   },
   "ApiUrl": "https://localhost:5001/"
 }
